@@ -14,11 +14,14 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package org.apache.kafka.common.errors;
 
-import java.util.Collections;
+import org.apache.kafka.common.annotation.InterfaceAudience;
+
 import java.util.Set;
 
+@InterfaceAudience.Public
 public class TopicAuthorizationException extends AuthorizationException {
     private final Set<String> unauthorizedTopics;
 
@@ -32,7 +35,7 @@ public class TopicAuthorizationException extends AuthorizationException {
     }
 
     public TopicAuthorizationException(String message) {
-        this(message, Collections.emptySet());
+        this(message, Set.of());
     }
 
     /**
