@@ -22,7 +22,6 @@ import org.apache.kafka.common.protocol.ApiKeys;
 import org.apache.kafka.common.protocol.Errors;
 import org.apache.kafka.common.protocol.Readable;
 
-import java.util.Collections;
 import java.util.Map;
 
 public class AddRaftVoterResponse extends AbstractResponse {
@@ -51,9 +50,9 @@ public class AddRaftVoterResponse extends AbstractResponse {
     @Override
     public Map<Errors, Integer> errorCounts() {
         if (data.errorCode() != Errors.NONE.code()) {
-            return Collections.singletonMap(Errors.forCode(data.errorCode()), 1);
+            return Map.of(Errors.forCode(data.errorCode()), 1);
         } else {
-            return Collections.emptyMap();
+            return Map.of();
         }
     }
 
