@@ -40,6 +40,8 @@ import org.apache.kafka.clients.consumer.internals.events.ShareUnsubscribeEvent;
 import org.apache.kafka.clients.consumer.internals.events.StopFindCoordinatorOnCloseEvent;
 import org.apache.kafka.clients.consumer.internals.metrics.AsyncConsumerMetrics;
 import org.apache.kafka.common.KafkaException;
+import org.apache.kafka.common.Metric;
+import org.apache.kafka.common.MetricName;
 import org.apache.kafka.common.TopicIdPartition;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.Uuid;
@@ -55,10 +57,10 @@ import org.apache.kafka.common.protocol.Errors;
 import org.apache.kafka.common.security.auth.SecurityProtocol;
 import org.apache.kafka.common.serialization.StringDeserializer;
 import org.apache.kafka.common.utils.LogCaptureAppender;
-import org.apache.kafka.common.utils.LogContext;
 import org.apache.kafka.common.utils.MockTime;
 import org.apache.kafka.common.utils.Time;
 import org.apache.kafka.common.utils.Timer;
+import org.apache.kafka.common.utils.internals.LogContext;
 import org.apache.kafka.test.MockConsumerInterceptor;
 
 import org.junit.jupiter.api.AfterEach;
@@ -71,6 +73,7 @@ import org.mockito.Mockito;
 
 import java.time.Duration;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
@@ -85,11 +88,10 @@ import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 import javax.security.auth.login.LoginException;
 
-import static java.util.Collections.singleton;
-import static java.util.Collections.singletonList;
 import static org.apache.kafka.clients.consumer.internals.ConsumerUtils.CONSUMER_SHARE_METRIC_GROUP;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -102,6 +104,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.argThat;
+import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.inOrder;
@@ -109,7 +112,7 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
-@SuppressWarnings("unchecked")
+@SuppressWarnings({"ClassFanOutComplexity", "unchecked"})
 public class ShareConsumerImplTest {
 
     private static final Optional<Integer> DEFAULT_ACQUISITION_LOCK_TIMEOUT_MS = Optional.of(30000);
@@ -117,6 +120,7 @@ public class ShareConsumerImplTest {
 
     private final Time time = new MockTime(1);
     private final ShareFetchCollector<String, String> fetchCollector = mock(ShareFetchCollector.class);
+    private final ShareFetchMetricsManager shareFetchMetricsManager = mock(ShareFetchMetricsManager.class);
     private final ShareConsumerMetadata metadata = mock(ShareConsumerMetadata.class);
     private final ApplicationEventHandler applicationEventHandler = mock(ApplicationEventHandler.class);
     private final LinkedBlockingQueue<ShareAcknowledgementEvent> acknowledgementEventQueue = new LinkedBlockingQueue<>();
@@ -193,6 +197,7 @@ public class ShareConsumerImplTest {
                 new StringDeserializer(),
                 fetchBuffer,
                 fetchCollector,
+                shareFetchMetricsManager,
                 time,
                 applicationEventHandler,
                 acknowledgementEventQueue,
@@ -254,7 +259,7 @@ public class ShareConsumerImplTest {
         final String topicName = "foo";
         doReturn(ShareFetch.empty()).when(fetchCollector).collect(any(ShareFetchBuffer.class));
 
-        final List<String> subscriptionTopic = Collections.singletonList(topicName);
+        final List<String> subscriptionTopic = List.of(topicName);
         completeShareSubscriptionChangeApplicationEventSuccessfully(subscriptions, subscriptionTopic);
         consumer.subscribe(subscriptionTopic);
 
@@ -271,7 +276,7 @@ public class ShareConsumerImplTest {
 
         // Set up subscription
         final String topicName = "foo";
-        final List<String> subscriptionTopic = Collections.singletonList(topicName);
+        final List<String> subscriptionTopic = List.of(topicName);
         completeShareSubscriptionChangeApplicationEventSuccessfully(subscriptions, subscriptionTopic);
         consumer.subscribe(subscriptionTopic);
 
@@ -312,7 +317,7 @@ public class ShareConsumerImplTest {
             return ShareFetch.empty();
         }).doAnswer(invocation -> ShareFetch.empty()).when(fetchCollector).collect(any(ShareFetchBuffer.class));
 
-        final List<String> subscriptionTopic = Collections.singletonList(topicName);
+        final List<String> subscriptionTopic = List.of(topicName);
         completeShareSubscriptionChangeApplicationEventSuccessfully(subscriptions, subscriptionTopic);
         consumer.subscribe(subscriptionTopic);
 
@@ -337,7 +342,7 @@ public class ShareConsumerImplTest {
             return fetch;
         }).when(fetchCollector).collect(Mockito.any(ShareFetchBuffer.class));
 
-        final List<String> subscriptionTopic = Collections.singletonList(topicName);
+        final List<String> subscriptionTopic = List.of(topicName);
         completeShareSubscriptionChangeApplicationEventSuccessfully(subscriptions, subscriptionTopic);
         consumer.subscribe(subscriptionTopic);
 
@@ -377,7 +382,7 @@ public class ShareConsumerImplTest {
                 .collect(any(ShareFetchBuffer.class));
 
         // Set up subscription
-        List<String> topics = Collections.singletonList(topic);
+        List<String> topics = List.of(topic);
         completeShareSubscriptionChangeApplicationEventSuccessfully(subscriptions, topics);
         consumer.subscribe(topics);
 
@@ -436,7 +441,7 @@ public class ShareConsumerImplTest {
             .collect(any(ShareFetchBuffer.class));
 
         // Set up subscription
-        List<String> topics = Collections.singletonList(topic);
+        List<String> topics = List.of(topic);
         completeShareSubscriptionChangeApplicationEventSuccessfully(subscriptions, topics);
         consumer.subscribe(topics);
         assertEquals(Optional.empty(), consumer.acquisitionLockTimeoutMs());
@@ -516,7 +521,7 @@ public class ShareConsumerImplTest {
             .collect(any(ShareFetchBuffer.class));
 
         // Set up subscription
-        List<String> topics = Collections.singletonList(topic);
+        List<String> topics = List.of(topic);
         completeShareSubscriptionChangeApplicationEventSuccessfully(subscriptions, topics);
         consumer.subscribe(topics);
 
@@ -674,10 +679,10 @@ public class ShareConsumerImplTest {
         consumer = newConsumer(subscriptions);
 
         String topic = "topic1";
-        final List<String> subscriptionTopic = singletonList(topic);
+        final List<String> subscriptionTopic = List.of(topic);
         completeShareSubscriptionChangeApplicationEventSuccessfully(subscriptions, subscriptionTopic);
         consumer.subscribe(subscriptionTopic);
-        assertEquals(singleton(topic), consumer.subscription());
+        assertEquals(Set.of(topic), consumer.subscription());
         verify(applicationEventHandler).addAndGet(ArgumentMatchers.isA(ShareSubscriptionChangeEvent.class));
     }
 
@@ -700,7 +705,7 @@ public class ShareConsumerImplTest {
 
         completeShareUnsubscribeApplicationEventSuccessfully(subscriptions);
 
-        consumer.subscribe(Collections.emptyList());
+        consumer.subscribe(List.of());
 
         verify(applicationEventHandler).addAndGet(ArgumentMatchers.isA(ShareUnsubscribeEvent.class));
     }
@@ -714,14 +719,14 @@ public class ShareConsumerImplTest {
     @Test
     public void testSubscriptionOnNullTopic() {
         consumer = newConsumer();
-        assertThrows(IllegalArgumentException.class, () -> consumer.subscribe(singletonList(null)));
+        assertThrows(IllegalArgumentException.class, () -> consumer.subscribe(Collections.singletonList(null)));
     }
 
     @Test
     public void testSubscriptionOnEmptyTopic() {
         consumer = newConsumer();
         String emptyTopic = "  ";
-        assertThrows(IllegalArgumentException.class, () -> consumer.subscribe(singletonList(emptyTopic)));
+        assertThrows(IllegalArgumentException.class, () -> consumer.subscribe(Collections.singletonList(emptyTopic)));
     }
 
     @Test
@@ -733,7 +738,7 @@ public class ShareConsumerImplTest {
         final KafkaException expectedException = new KafkaException("Nobody expects the Spanish Inquisition");
         final ErrorEvent errorBackgroundEvent = new ErrorEvent(expectedException);
         backgroundEventQueue.add(errorBackgroundEvent);
-        consumer.subscribe(Collections.singletonList("t1"));
+        consumer.subscribe(List.of("t1"));
         final KafkaException exception = assertThrows(KafkaException.class, () -> consumer.poll(Duration.ZERO));
 
         assertEquals(expectedException.getMessage(), exception.getMessage());
@@ -751,7 +756,7 @@ public class ShareConsumerImplTest {
         final KafkaException expectedException2 = new KafkaException("Spam, Spam, Spam");
         final ErrorEvent errorBackgroundEvent2 = new ErrorEvent(expectedException2);
         backgroundEventQueue.add(errorBackgroundEvent2);
-        consumer.subscribe(Collections.singletonList("t1"));
+        consumer.subscribe(List.of("t1"));
         final KafkaException exception = assertThrows(KafkaException.class, () -> consumer.poll(Duration.ZERO));
 
         assertEquals(expectedException1.getMessage(), exception.getMessage());
@@ -808,7 +813,7 @@ public class ShareConsumerImplTest {
                 .when(fetchCollector)
                 .collect(Mockito.any(ShareFetchBuffer.class));
 
-        final List<String> subscriptionTopic = singletonList("topic");
+        final List<String> subscriptionTopic = List.of("topic");
         completeShareSubscriptionChangeApplicationEventSuccessfully(subscriptions, subscriptionTopic);
         consumer.subscribe(subscriptionTopic);
 
@@ -820,6 +825,37 @@ public class ShareConsumerImplTest {
         completeShareUnsubscribeApplicationEventSuccessfully(subscriptions);
         consumer.close();
         verify(applicationEventHandler).addAndGet(any(ShareAcknowledgeOnCloseEvent.class));
+    }
+
+    @Test
+    public void testPollDoesNotAddNewSharePollEventWhenOneIsAlreadyInFlight() {
+        ShareFetchBuffer fetchBuffer = mock(ShareFetchBuffer.class);
+        SubscriptionState subscriptions = new SubscriptionState(new LogContext(), AutoOffsetResetStrategy.NONE);
+        consumer = newConsumer(fetchBuffer, subscriptions, "group-id", "client-id", "implicit");
+
+        TopicPartition tp = new TopicPartition("topic1", 0);
+        subscriptions.assignFromUser(Collections.singleton(tp));
+        subscriptions.seek(tp, 0);
+
+        // Keep pollForFetches from spinning by making it "wait" and advance MockTime.
+        doReturn(100L).when(applicationEventHandler).maximumTimeToWait();
+        doAnswer(invocation -> {
+            Timer pollTimer = invocation.getArgument(0, Timer.class);
+            ((MockTime) time).sleep(pollTimer.remainingMs());
+            return null;
+        }).when(fetchBuffer).awaitNotEmpty(any(Timer.class));
+
+        // Always empty fetch: forces multiple loop iterations until the overall poll timeout expires.
+        doReturn(ShareFetch.empty()).when(fetchCollector).collect(any(ShareFetchBuffer.class));
+
+        ConsumerRecords<?, ?> result = consumer.poll(Duration.ofMillis(450));
+        assertTrue(result.isEmpty());
+
+        // Ensure we actually exercised the "wait for fetches" path (i.e., more than a trivial single pass).
+        verify(fetchBuffer, atLeastOnce()).awaitNotEmpty(any(Timer.class));
+
+        // Only one SharePollEvent must have been added despite multiple poll loop iterations.
+        verify(applicationEventHandler, times(1)).add(any(SharePollEvent.class));
     }
 
     @ParameterizedTest
@@ -955,10 +991,57 @@ public class ShareConsumerImplTest {
         assertEquals(0, timer.remainingMs());
     }
 
+    @Test
+    public void testMetricsRemovedOnClose() {
+        consumer = newConsumer();
+        assertMetricsMap(true);
+        consumer.close(Duration.ZERO);
+        assertMetricsMap(false);
+    }
+
+    private void assertMetricsMap(boolean metricsShouldBePresent) {
+        // Copy the map because we're going to modify it.
+        Map<MetricName, ? extends Metric> metrics = new HashMap<>(consumer.metrics());
+
+        // There's a meta-metric named "count" that is automatically added to the metrics map.
+        Optional<MetricName> countMetricNameOpt = metrics.keySet().stream()
+            .filter(metricName -> metricName.name().equals("count") && metricName.group().equals("kafka-metrics-count"))
+            .findAny();
+
+        // Make sure the meta-metric is present and has an entry.
+        assertTrue(
+            countMetricNameOpt.isPresent(),
+            "The \"count\" meta-metric was unexpectedly missing from the Consumer metrics"
+        );
+        MetricName countMetricName = countMetricNameOpt.get();
+        assertNotNull(
+            metrics.remove(countMetricName),
+            "The \"count\" meta-metric key was removed from the Consumer metrics map, but it unexpectedly had no entry"
+        );
+
+        if (metricsShouldBePresent) {
+            assertFalse(
+                metrics.isEmpty(),
+                "The consumer should have created metrics, but they are unexpectedly empty"
+            );
+        } else {
+            List<String> expected = List.of();
+            List<String> actual = metrics.keySet().stream()
+                .map(metricName -> metricName.group() + ":" + metricName.name())
+                .sorted()
+                .collect(Collectors.toList());
+            assertEquals(
+                expected,
+                actual,
+                "The consumer should have removed its metrics on close(), but there are metrics remaining"
+            );
+        }
+    }
+
     /**
      * This test ensures that the {@link ShareConsumer} implementation fails on creation when the underlying
      * {@link NetworkClient} fails creation.
-     *
+     * <p>
      * The logic to check for this case is admittedly a bit awkward because the constructor can fail for all
      * manner of reasons. So a failure case is created by specifying an invalid
      * {@link javax.security.auth.spi.LoginModule} class name, which in turn causes the {@link NetworkClient}
