@@ -18,6 +18,7 @@ package org.apache.kafka.streams.kstream.internals.foreignkeyjoin;
 
 import org.apache.kafka.common.metrics.Sensor;
 import org.apache.kafka.common.utils.Bytes;
+import org.apache.kafka.common.utils.internals.ByteUtils;
 import org.apache.kafka.streams.KeyValue;
 import org.apache.kafka.streams.kstream.internals.Change;
 import org.apache.kafka.streams.processor.api.ContextualProcessor;
@@ -32,14 +33,13 @@ import org.apache.kafka.streams.processor.internals.StoreFactory.FactoryWrapping
 import org.apache.kafka.streams.processor.internals.metrics.TaskMetrics;
 import org.apache.kafka.streams.state.KeyValueIterator;
 import org.apache.kafka.streams.state.StoreBuilder;
-import org.apache.kafka.streams.state.TimestampedKeyValueStore;
-import org.apache.kafka.streams.state.ValueAndTimestamp;
+import org.apache.kafka.streams.state.TimestampedKeyValueStoreWithHeaders;
+import org.apache.kafka.streams.state.ValueTimestampHeaders;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.nio.ByteBuffer;
-import java.util.Collections;
 import java.util.Set;
 
 public class ForeignTableJoinProcessorSupplier<KLeft, KRight, VRight>
@@ -58,7 +58,7 @@ public class ForeignTableJoinProcessorSupplier<KLeft, KRight, VRight>
 
     @Override
     public Set<StoreBuilder<?>> stores() {
-        return Collections.singleton(new FactoryWrappingStoreBuilder<>(subscriptionStoreFactory));
+        return Set.of(new FactoryWrappingStoreBuilder<>(subscriptionStoreFactory));
     }
 
     @Override
@@ -77,7 +77,7 @@ public class ForeignTableJoinProcessorSupplier<KLeft, KRight, VRight>
 
     private final class KTableKTableJoinProcessor extends ContextualProcessor<KRight, Change<VRight>, KLeft, SubscriptionResponseWrapper<VRight>> {
         private Sensor droppedRecordsSensor;
-        private TimestampedKeyValueStore<Bytes, SubscriptionWrapper<KLeft>> subscriptionStore;
+        private TimestampedKeyValueStoreWithHeaders<Bytes, SubscriptionWrapper<KLeft>> subscriptionStore;
 
         @Override
         public void init(final ProcessorContext<KLeft, SubscriptionResponseWrapper<VRight>> context) {
@@ -119,17 +119,17 @@ public class ForeignTableJoinProcessorSupplier<KLeft, KRight, VRight>
                 return;
             }
 
-            final Bytes prefixBytes = keySchema.prefixBytes(record.key());
+            final Bytes prefixBytes = keySchema.prefixBytes(record.key(), record.headers());
 
             //Perform the prefixScan and propagate the results
-            try (final KeyValueIterator<Bytes, ValueAndTimestamp<SubscriptionWrapper<KLeft>>> prefixScanResults =
-                     subscriptionStore.range(prefixBytes, Bytes.increment(prefixBytes))) {
+            try (final KeyValueIterator<Bytes, ValueTimestampHeaders<SubscriptionWrapper<KLeft>>> prefixScanResults =
+                     subscriptionStore.range(prefixBytes, ByteUtils.increment(prefixBytes))) {
 
                 while (prefixScanResults.hasNext()) {
-                    final KeyValue<Bytes, ValueAndTimestamp<SubscriptionWrapper<KLeft>>> next = prefixScanResults.next();
+                    final KeyValue<Bytes, ValueTimestampHeaders<SubscriptionWrapper<KLeft>>> next = prefixScanResults.next();
                     // have to check the prefix because the range end is inclusive :(
                     if (prefixEquals(next.key.get(), prefixBytes.get())) {
-                        final CombinedKey<KRight, KLeft> combinedKey = keySchema.fromBytes(next.key);
+                        final CombinedKey<KRight, KLeft> combinedKey = keySchema.fromBytes(next.key, record.headers());
                         context().forward(
                             record.withKey(combinedKey.primaryKey())
                                 .withValue(new SubscriptionResponseWrapper<>(
