@@ -327,7 +327,7 @@ public class InternalTopologyBuilder {
             // yet and hence the map from source node to topics is stale, in this case we put the pattern as a place holder;
             // this should only happen for debugging since during runtime this function should always be called after the metadata has updated.
             if (subscribedTopics.isEmpty()) {
-                return Collections.singletonList(String.valueOf(pattern));
+                return List.of(String.valueOf(pattern));
             }
 
             final List<String> matchedTopics = new ArrayList<>();
@@ -598,34 +598,29 @@ public class InternalTopologyBuilder {
     public final void addStateStore(final StoreBuilder<?> storeBuilder,
                                     final String... processorNames) {
         Objects.requireNonNull(storeBuilder, "storeBuilder cannot be null");
-        addStateStore(StoreBuilderWrapper.wrapStoreBuilder(storeBuilder), false, processorNames);
+        addStateStore(StoreBuilderWrapper.wrapStoreBuilder(storeBuilder), processorNames);
     }
 
     public final void addStateStore(final StoreFactory storeFactory,
                                     final String... processorNames) {
-        addStateStore(storeFactory, false, processorNames);
-    }
-
-    public final void addStateStore(final StoreFactory storeFactory,
-                                    final boolean allowOverride,
-                                    final String... processorNames) {
-        Objects.requireNonNull(storeFactory, "stateStoreFactory cannot be null");
+        Objects.requireNonNull(storeFactory, "storeFactory cannot be null");
         final String storeName = storeFactory.storeName();
         Objects.requireNonNull(storeName, "state store name cannot be null");
 
         final StoreFactory stateFactory = stateFactories.get(storeName);
-        if (!allowOverride && stateFactory != null && !stateFactory.isCompatibleWith(storeFactory)) {
+        if (stateFactory != null && !stateFactory.isCompatibleWith(storeFactory)) {
             throw new TopologyException("A different StateStore has already been added with the name " + storeName);
         }
         if (globalStateBuilders.containsKey(storeName)) {
             throw new TopologyException("A different GlobalStateStore has already been added with the name " + storeName);
         }
 
-        stateFactories.put(storeName, storeFactory);
+        // Reuse existing compatible factory to preserve connectedProcessorNames (KAFKA-20464).
+        stateFactories.putIfAbsent(storeName, storeFactory);
 
         if (processorNames != null) {
             for (final String processorName : processorNames) {
-                Objects.requireNonNull(processorName, "processor cannot not be null");
+                Objects.requireNonNull(processorName, "processor cannot be null");
                 connectProcessorAndStateStore(processorName, storeName);
             }
         }
@@ -791,7 +786,7 @@ public class InternalTopologyBuilder {
                         .map(sourceGroup -> sourceGroup
                                 .stream()
                                 .flatMap(sourceNodeName -> nodeToSourceTopics.getOrDefault(sourceNodeName,
-                                        Collections.emptyList()).stream())
+                                        List.of()).stream())
                                 .collect(Collectors.toSet())
                         ).collect(Collectors.toList());
         for (final Set<String> copartition : allCopartitionedSourceTopics) {
@@ -1122,6 +1117,7 @@ public class InternalTopologyBuilder {
         }
     }
 
+    @SuppressWarnings("deprecation")
     private void buildProcessorNode(final Map<String, ProcessorNode<?, ?, ?, ?>> processorMap,
                                     final Map<String, StateStore> stateStoreMap,
                                     final ProcessorNodeFactory<?, ?, ?, ?> factory,
@@ -1280,10 +1276,10 @@ public class InternalTopologyBuilder {
                                                                final Optional<Integer> numberOfPartitions) {
         return numberOfPartitions
             .map(partitions -> new RepartitionTopicConfig(internalTopic,
-                                                          Collections.emptyMap(),
+                                                          Map.of(),
                                                           partitions,
                                                           true))
-            .orElse(new RepartitionTopicConfig(internalTopic, Collections.emptyMap()));
+            .orElse(new RepartitionTopicConfig(internalTopic, Map.of()));
     }
 
     private void setRegexMatchedTopicsToSourceNodes() {
@@ -1439,7 +1435,7 @@ public class InternalTopologyBuilder {
 
     private List<String> maybeDecorateInternalSourceTopics(final Collection<String> sourceTopics) {
         if (sourceTopics == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         final List<String> decoratedTopics = new ArrayList<>();
         for (final String topic : sourceTopics) {
@@ -1456,6 +1452,19 @@ public class InternalTopologyBuilder {
         return decorateTopic(topic);
     }
 
+    /**
+     * If {@code topic} is an internally-managed topic in this topology (a repartition topic,
+     * a changelog topic, etc.), return the decorated name with the applicationId prefix.
+     * Otherwise return the topic name unchanged.
+     */
+    public String maybeDecorateInternalTopic(final String topic) {
+        if (topic != null && internalTopicNamesWithProperties.containsKey(topic)) {
+            return decorateTopic(topic);
+        }
+        return topic;
+    }
+
+    @SuppressWarnings("deprecation")
     private String decorateTopic(final String topic) {
         if (applicationId == null) {
             throw new TopologyException("there are internal topics and "
@@ -1701,8 +1710,8 @@ public class InternalTopologyBuilder {
                            final String storeName,
                            final String topicName,
                            final int id) {
-            source = new Source(sourceName, Collections.singleton(topicName), null);
-            processor = new Processor(processorName, Collections.singleton(storeName));
+            source = new Source(sourceName, Set.of(topicName), null);
+            processor = new Processor(processorName, Set.of(storeName));
             source.successors.add(processor);
             processor.predecessors.add(source);
             this.id = id;
